# actions-cookbook

./: .gitignore  LICENSE  README.md
api-and-notify/: README.md  action-server.yaml  actions_api.py  conda.yaml  package.yaml  robot.yaml
api-jokes/: actions.py  conda.yaml  package.yaml
browser-fill-form/: .gitignore  README.md  actions.py  package.yaml
browser-google/: conda.yaml  package.yaml
database-postgres/: README.md  actions.py  conda.yaml  package.yaml  robot.yaml
deploy-digital-ocean/: README.md  actions.py  conda.yaml  package.yaml
deploy-docker/: .dockerignore  Dockerfile  README.md  actions.py  conda.yaml  package.yaml
deploy-fly-io/: .gitignore  README.md  action.py  actions.py  conda.yaml  fly.toml  package.yaml  robot.yaml
deploy-railway/: README.md  railway.toml  railway.yaml  robot.yaml
deploy-render/: README.md  action-server.yaml  action.py  conda.yaml  package.yaml  render.yaml
desktop-files/: README.md  actions.py  conda.yaml  package.yaml  robot.yaml
example-anthropic-claude3/: README.md  actions.py  package.yaml
example-chatbot/: README.md  action-server.yaml  actions-chat.py  actions-main.py  conda.yaml  package.yaml
example-curly-json/: .gitignore  README.md  action.py  conda.yaml  package.yaml
example-excel-local/: README.md  actions.py  my-excel.xlsx  (+1 more)
example-user-input/: README.md  pyproject.toml  server.py
example-user-input/actions/: action.py  conda.yaml
local-advanced-data-analysis/: pyproject.toml
local-advanced-data-analysis/actions/: actions.py  conda.yaml  package.yaml
local-advanced-data-analysis/lada/: runner.py
(+95 files in other folders)
