[tool.poetry]
name = "lada"
version = "0.1.0"
description = ""
authors = ["Mikko Korpela <mikko@robocorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
robocorp-actions = "^0.0.6"
requests = "^2.31.0"
uvicorn = "^0.25.0"
nbconvert = "^7.14.0"
nbformat = "^5.9.2"
ipython = "^8.20.0"
ipykernel = "^6.28.0"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
numpy = "^1.26.3"
scipy = "^1.11.4"
xarray = "^2023.12.0"
scikit-learn = "^1.3.2"
keras = "^3.0.2"
xgboost = "^2.0.3"
spacy = "^3.7.2"
flask = "^3.0.0"
django = "^5.0.2"
beautifulsoup4 = "^4.12.2"
lxml = "^5.1.0"
pytesseract = "^0.3.10"
plotly = "^5.18.0"
seaborn = "^0.13.1"
bokeh = "^3.3.3"
altair = "^5.2.0"
sqlalchemy = "^2.0.25"
pymysql = "^1.1.0"
pymongo = "^4.6.1"
redis = "^5.0.1"
aiohttp = "^3.9.2"
websockets = "^12.0"
pyyaml = "^6.0.1"
celery = "^5.3.6"
pytest = "^7.4.4"
cryptography = "^41.0.7"
imagekitio = "^3.2.0"
opencv-python = "^4.9.0.80"
python-dotenv = "^1.0.0"
pyautogui = "^0.9.54"
pyscreenshot = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
